# cloud_task_executor

./: Cargo.toml  README.md
basic_macros/src/: lib.rs
example/: main.rs
src/: args.rs  cloud_providers.rs  executor.rs  lib.rs  main.rs
src/basic_macros/: Cargo.toml
src/cte_basic_macros/: Cargo.toml
src/cte_basic_macros/src/: lib.rs
