workspace = { members = ["basic_macros"] }
[package]
name = "CloudTaskExecutor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic_macros = { path = "basic_macros" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
serde_json = "1.0.120"
# 替换libssl.so.10
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.80"
lambda_runtime = "0.13.0"
warp = "0.3"
quote = "1.0.36"
syn = "2.0.72"
