workspace = { members = ["src/basic_macros"] }
[package]
name = "cloud_task_executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cloud_task_executor_example"
path = "example/main.rs"

[dependencies]
basic_macros = { path = "src/basic_macros" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
serde = "1.0.143"
serde_json = "1.0.120"
structopt = "0.3.26"
# 替换libssl.so.10
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.80"
lambda_runtime = "0.13.0"
warp = "0.3"
quote = "1.0.36"
syn = "2.0.72"
