workspace = { members = ["src/cte_basic_macros"] }
[package]
name = "cloud_task_executor"
version = "0.1.0"
edition = "2021"
authors = ["aprchen <ott321@yeah.net>"]
description = "The Cloud Task Executor is a versatile and powerful framework designed to simplify the execution of tasks in cloud environments such as AWS Lambda and Alibaba Cloud Function Compute (FC). It provides a unified interface for registering and executing tasks, managing execution contexts, and handling pre- and post-execution actions. This flexibility allows developers to focus on the core logic of their tasks without worrying about the underlying cloud infrastructure."
repository = "https://github.com/aprchen/cloud_task_executor"
readme = "README.md"
keywords = ["task", "lambda", "fc", "alibaba", "aws"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cloud_task_executor_example"
path = "example/main.rs"

[dependencies]
cte_basic_macros = "0.1.0"
tokio = "1.39.1"
futures = "0.3.30"
serde = "1.0.143"
serde_json = "1.0.120"
structopt = "0.3.26"
# 替换libssl.so.10
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0.80"
lambda_runtime = "0.13.0"
warp = "0.3"
quote = "1.0.36"
syn = "2.0.72"
