[package]
name = "cte_basic_macros"
version = "0.1.0"
edition = "2018"
authors = ["aprchen <ott321@yeah.net>"]
description = "A simple macro for generating cloud_task_executor task in Rust"
license = "MIT"
license-file = "LICENSE.txt"
repository = "https://github.com/aprchen/cloud_task_executor"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"